fixed rodentia & gilded fish, and overflow of images issue

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -148,6 +148,7 @@ hr {
    position: relative;
    width: 33.3%;
    padding-bottom: 33.3%;
+   overflow: hidden;
 }
 
 .boxInner {
